# Raki

./: .gitignore  GOOGLE_OAUTH_SETUP.md  README.md  docker-compose.yml
.github/workflows/: crab-nebula.yml  porter_app_raki_1532.yml  porter_stack_raki-backend.yml
projects/frontend/: .dockerignore  .gitignore  Dockerfile  MIGRATION_TESTING.md  README.md  cypress.config.ts  cypress.env.example.json  debug-test.js  (+9 more)
projects/ground_truth/: README.md  pyproject.toml
projects/ground_truth/ground_truth_comparator/: __init__.py  cli.py  comparator.py  models.py  reporter.py
projects/llm_backend/: Dockerfile  MONGODB_SETUP.md  alembic.ini  env_template.txt  pyproject.toml  requirements.txt  test_user_data_api.py
projects/llm_backend/alembic/: env.py
projects/llm_backend/alembic/versions/: 160db4b9043d_add_data_models_with_user_relationships.py  5468da3b8982_create_users_table.py  9747dde4a66f_add_workspaces_and_workspace_relationships.py
projects/llm_backend/app/: build.py  llm_calls.py  main.py
projects/llm_backend/app/config/: database.py  environment.py
projects/llm_backend/app/lib/: db.py
projects/llm_backend/app/models/: auth_models.py  auth_schemas.py  base.py  data_models.py  data_schemas.py  datapoint_extraction_models.py  models.py  text_segmentation_models.py  user.py  user_data_models.py  user_data_models_simple.py
projects/llm_backend/app/prompts/: profile_chat.py  substrings.py  values.py
projects/llm_backend/app/prompts/datapoint_extraction/: double_check.py  profile_chat.py  rate_regex_extractions.py  substrings.py  values.py
projects/llm_backend/app/prompts/text_segmentation/: double_check.py  profile_chat.py  segments.py
projects/llm_backend/app/routers/: auth.py  data.py  pipeline.py  profile_chat.py  substrings.py  user_data.py  values.py
projects/llm_backend/app/routers/datapoint_extraction/: double_check.py  pipeline.py  profile_chat.py  substrings.py  values.py
projects/llm_backend/app/routers/support/: __init__.py  email.py
projects/llm_backend/app/routers/text_segmentation/: double_check.py  pdf_extraction.py  profile_chat.py  segments.py
projects/llm_backend/app/services/: auth_service.py  data_crud.py  pipeline.py  profile_chat.py  substrings.py  user_data_service.py  values.py
projects/llm_backend/app/services/datapoint_extraction/: double_check.py  pipeline.py  profile_chat.py  rate_regex_matches.py  regex_extraction.py  substrings.py  values.py
projects/llm_backend/app/services/support/: README.md  __init__.py  email_service.py  example_usage.py  test_email_service.py
projects/llm_backend/app/services/text_segmentation/: double_check.py  pdf_extraction.py  profile_chat.py  segments.py
projects/llm_backend/app/utils/: auth.py  matching.py  utils.py
(+335 files in other folders)
