[project]
name = "llm-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "langchain-community>=0.3.13",
    "langchain>=0.3.13",
    "openai>=1.58.1",
    "rich>=13.9.4",
    "pyinstaller>=6.11.1",
    "fuzzywuzzy[speedup]>=0.18.0",
    "langchain-openai>=0.2.14",
    "pymupdf4llm>=0.0.17",
]
